- Changed AmpSubsystem motor from talonFX to Neo spark
- Fixed Motor Id, Motor Revere Bug
- Move SwerveDriveConstants.LLConstants to NotePoseEstimator
- Completed ElevatorCmd.java

2024/7/27 v1.3
- Fixed AprilTagPoseEstimator math error
- Fixed Swerve Constant track width and length
- Optimized VisionSubsystem

2024/7/27 v1.4
- Added autonomous auto check note command

2024/7/27 v1.5
- Fixed AutoCheckNoteCmd's problem
- Added AutoTrack to AutoCheckNoteCmds

2024/7/27 v1.6
- Fixed AprilTagPoseEstimator, NotePoseEstimator camera pose accuracy
- Added AutoTrack to AutoCheckNoteCmds

2024/7/28 v1.6.1
- Optimized Swerve max acceleration speed and max acceleration angular speed
- Limit Joystick acceleration

2024/7/28 v1.6.2
- Added auto aim speaker and autorotation to speaker
- Improved the accuracy of detecting notes

2024/7/30 v1.7
- Added all auto shoot command
- Added auto Turnging command
- Added elevator PID
- Added getGoalArmDeg, getGoalRotationDeg
- Changed caculate shoot arm degrees method

2024/7/31 v1.7.1
-Add SequentialCommandGroup and ParallelDeadlineGroup in name cmd to call AutoCheckNoteCmd.

2024/8/2 v1.7.2
-Add NEO conveyorBelt to IntakeSubsystem.

2024/8/3 v1.8
- Added driver joystick brake
- Added auto amp command
- Fixed getAprilTagRotation xy error
- Optimized elevator pid
- Optimized swerve drive pid
- Optimized shooter arm pid

2024/8/4 v1.9
- Added auto aim command
- Added auto turn command
- Added auto amp command
- Added shooter to elevator command
- Added getRobotField method
- Fixed pathplanner path problem
- Fixed swerve module cancoder get position offset
- Fixed Cartesian coordinate conversion rotate bug
- Increased elevator speed limit
- Adjusted Swerve rotation pid
- Deprecated the method of detecting Apriltag and targeting Speaker, use Pose2d to make Shooter aim at Speaker and turn here

2024/8/5 v1.9.1
- Corrected NotePoseEstimator limelight pose and central sight vector