@@ -9,7 +9,7 @@
   ],
   "autoFolders": [],
   "defaultMaxVel": 3.9,
-  "defaultMaxAccel": 3.0,
+  "defaultMaxAccel": 3.5,
   "defaultMaxAngVel": 360.0,
   "defaultMaxAngAccel": 360.0,
   "maxModuleSpeed": 4.0
