@@ -19,7 +19,7 @@ public class SwerveDriveConstants {
 
 	public static final class ControllerConstants {
 		public static final double INTAKE_SPEED = 0.35;
-		public static final double AMP_SPEED = 0.4;
+		public static final double AMP_SPEED = 0.2;
 		public static final double ELEVATOR_ROT_UP_LIMIT = 54.57421875;
 		public static final double ELEVATOR_ROT_DOWN_LIMIT = 0.0;
 		public static final double SHOOTER_TO_ELEVATOR = 0.0; // TODO
